--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26233,5 +26233,15 @@
         <target><![CDATA[Esta barra indica el nivel de tu <strong>hambre</strong> como mutante.<strong><br />¡Si el límite rojo es sobrepasado, morirás esta noche!</strong> Devora a un habitante (solución ideal), o encuentra carne humana para sobrevivir.]]></target>
       </segment>
     </unit>
+    <unit id="Hy1STmq" name="vollständig demoliert und wiederverwertet...">
+      <notes>
+        <note category="german">vollständig demoliert und wiederverwertet...</note>
+        <note category="from">twig:///templates/ajax/game/town/home_foreign.html.twig</note>
+      </notes>
+      <segment>
+        <source>vollständig demoliert und wiederverwertet...</source>
+        <target>enteramente destrozada y reciclada...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
