--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5863,5 +5863,11 @@
         <target>Hierfür hast du keinen Platz.</target>
       </segment>
     </unit>
+    <unit id="gObW_J5">
+      <segment>
+        <source>Du kannst dieses Serum nicht auf dich selbst anwenden, oder du wirst der beste Freund eines Ghuls...</source>
+        <target>Du kannst dieses Serum nicht auf dich selbst anwenden, oder du wirst der beste Freund eines Ghuls...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
