--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9432,22 +9432,20 @@
       <notes>
         <note category="german">Eintrittskarte</note>
         <note category="from">db://FeatureUnlockPrototype</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Eintrittskarte</source>
-        <target>Eintrittskarte</target>
+        <target>Boleto de admisión</target>
       </segment>
     </unit>
     <unit id=".LeRrBD">
       <notes>
         <note category="german">Hiermit kannst du Städten beitreten, obwohl du die Mindestanzahl an Seelenpunkten noch nicht erreicht hast.</note>
         <note category="from">db://FeatureUnlockPrototype</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Hiermit kannst du Städten beitreten, obwohl du die Mindestanzahl an Seelenpunkten noch nicht erreicht hast.</source>
-        <target>Hiermit kannst du Städten beitreten, obwohl du die Mindestanzahl an Seelenpunkten noch nicht erreicht hast.</target>
+        <target>Esto te permite unirte a ciudades aunque no hayas alcanzado el número mínimo de puntos de alma.</target>
       </segment>
     </unit>
   </file>
