FR translation for private town alias selection

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -20556,7 +20556,7 @@
       </notes>
       <segment>
         <source>Deine Identität</source>
-        <target>Deine Identität</target>
+        <target>Votre identité</target>
       </segment>
     </unit>
     <unit id="0DPxQPn" name="Diese Stadt erlaubt es, einen Spitznamen zu tragen.">
