--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4352,7 +4352,7 @@
       </notes>
       <segment>
         <source>Schreiben</source>
-        <target>Envoyer message</target>
+        <target>Envoyer un message</target>
       </segment>
     </unit>
     <unit id="ukvMJvG" name="Kontakt hinzufügen">
