FR alias hint translation

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -20578,7 +20578,7 @@
       </notes>
       <segment>
         <source>Freilassen, um normalen Spielernamen zu verwenden.</source>
-        <target>Freilassen, um normalen Spielernamen zu verwenden.</target>
+        <target>Laissez ce champ vide pour conserver votre nom habituel.</target>
       </segment>
     </unit>
     <unit id="G2mvpQw" name="Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:">
